// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Client Experience should render for empty data: NoData 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-1352uh8-0 kLLEPp"
  >
    <div
      class="styledComponents__Wrapper-sc-13w5wfx-4 kasAXB"
      type="default"
    >
      <div
        class="ant-card"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 4px;"
                >
                  <div
                    class="styledComponents__Title-sc-13w5wfx-5 hYNJuf"
                  >
                    Client Experience
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <svg
                    class="styledComponents__HistoricalOutlinedIcon-sc-13w5wfx-2 eSbgcz"
                    data-testid="HistoricalOutlined"
                  />
                </div>
              </div>
            </div>
            <div
              class="ant-card-extra"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only styledComponents__Button-sc-13w5wfx-3 hJUrXB"
                    title="Expand"
                    type="button"
                  >
                    <svg
                      class="styledComponents__ArrowChevronRightIcon-sc-13w5wfx-0 bIuzgA"
                      data-testid="ArrowChevronRight"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <div
            style="overflow: visible; height: 0px; width: 0px;"
          >
            <div
              style="display: flex; height: 800px; width: 1280px; flex-direction: column; justify-content: space-around;"
            >
              <div
                class="ant-row Grid__GridRow-sc-5irhjd-2"
                style="margin: -10px -10px -10px -10px;"
              >
                <div
                  class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="Grid__Container-sc-5irhjd-1 dRhDDA"
                  >
                    Connection Success
                  </div>
                </div>
                <div
                  class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="Grid__Container-sc-5irhjd-1 dRhDDA"
                  >
                    <div
                      class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default styledComponents__Progress-sc-vd53zu-0 laNiWC"
                    >
                      <div
                        class="ant-progress-outer"
                      >
                        <div
                          class="ant-progress-inner"
                          style="background-color: rgb(212, 212, 212);"
                        >
                          <div
                            class="ant-progress-bg"
                            style="width: 0%; height: 10px; background: rgb(237, 28, 36);"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-row Grid__GridRow-sc-5irhjd-2"
                style="margin: -10px -10px -10px -10px;"
              >
                <div
                  class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="Grid__Container-sc-5irhjd-1 dRhDDA"
                  >
                    Time To Connect
                  </div>
                </div>
                <div
                  class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="Grid__Container-sc-5irhjd-1 dRhDDA"
                  >
                    <div
                      class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default styledComponents__Progress-sc-vd53zu-0 laNiWC"
                    >
                      <div
                        class="ant-progress-outer"
                      >
                        <div
                          class="ant-progress-inner"
                          style="background-color: rgb(212, 212, 212);"
                        >
                          <div
                            class="ant-progress-bg"
                            style="width: 0%; height: 10px; background: rgb(237, 28, 36);"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-row Grid__GridRow-sc-5irhjd-2"
                style="margin: -10px -10px -10px -10px;"
              >
                <div
                  class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="Grid__Container-sc-5irhjd-1 dRhDDA"
                  >
                    Client Throughput
                  </div>
                </div>
                <div
                  class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="Grid__Container-sc-5irhjd-1 dRhDDA"
                  >
                    <div
                      class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default styledComponents__Progress-sc-vd53zu-0 laNiWC"
                    >
                      <div
                        class="ant-progress-outer"
                      >
                        <div
                          class="ant-progress-inner"
                          style="background-color: rgb(212, 212, 212);"
                        >
                          <div
                            class="ant-progress-bg"
                            style="width: 0%; height: 10px; background: rgb(237, 28, 36);"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-row Grid__GridRow-sc-5irhjd-2"
                style="margin: -10px -10px -10px -10px;"
              >
                <div
                  class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="Grid__Container-sc-5irhjd-1 dRhDDA"
                  >
                    Online APs
                  </div>
                </div>
                <div
                  class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="Grid__Container-sc-5irhjd-1 dRhDDA"
                  >
                    <div
                      class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default styledComponents__Progress-sc-vd53zu-0 laNiWC"
                    >
                      <div
                        class="ant-progress-outer"
                      >
                        <div
                          class="ant-progress-inner"
                          style="background-color: rgb(212, 212, 212);"
                        >
                          <div
                            class="ant-progress-bg"
                            style="width: 0%; height: 10px; background: rgb(237, 28, 36);"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-row Grid__GridRow-sc-5irhjd-2"
                style="margin: -10px -10px -10px -10px;"
              >
                <div
                  class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="Grid__Container-sc-5irhjd-1 dRhDDA"
                  >
                    AP Capacity
                  </div>
                </div>
                <div
                  class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="Grid__Container-sc-5irhjd-1 dRhDDA"
                  >
                    <div
                      class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default styledComponents__Progress-sc-vd53zu-0 laNiWC"
                    >
                      <div
                        class="ant-progress-outer"
                      >
                        <div
                          class="ant-progress-inner"
                          style="background-color: rgb(212, 212, 212);"
                        >
                          <div
                            class="ant-progress-bg"
                            style="width: 0%; height: 10px; background: rgb(237, 28, 36);"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1281px; height: 801px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Client Experience should render widget with proper data 1`] = `
<DocumentFragment>
   
  <div
    class="styledComponents__Wrapper-sc-1352uh8-0 kLLEPp"
  >
    <div
      class="styledComponents__Wrapper-sc-13w5wfx-4 kasAXB"
      type="default"
    >
      <div
        class="ant-card"
      >
        <div
          class="ant-card-head"
        >
          <div
            class="ant-card-head-wrapper"
          >
            <div
              class="ant-card-head-title"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                  style="margin-right: 4px;"
                >
                  <div
                    class="styledComponents__Title-sc-13w5wfx-5 hYNJuf"
                  >
                    Client Experience
                  </div>
                </div>
                <div
                  class="ant-space-item"
                >
                  <svg
                    class="styledComponents__HistoricalOutlinedIcon-sc-13w5wfx-2 eSbgcz"
                    data-testid="HistoricalOutlined"
                  />
                </div>
              </div>
            </div>
            <div
              class="ant-card-extra"
            >
              <div
                class="ant-space ant-space-horizontal ant-space-align-center"
              >
                <div
                  class="ant-space-item"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-icon-only styledComponents__Button-sc-13w5wfx-3 hJUrXB"
                    title="Expand"
                    type="button"
                  >
                    <svg
                      class="styledComponents__ArrowChevronRightIcon-sc-13w5wfx-0 bIuzgA"
                      data-testid="ArrowChevronRight"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="ant-card-body"
        >
          <div
            style="overflow: visible; height: 0px; width: 0px;"
          >
            <div
              style="display: flex; height: 800px; width: 1280px; flex-direction: column; justify-content: space-around;"
            >
              <div
                class="ant-row Grid__GridRow-sc-5irhjd-2"
                style="margin: -10px -10px -10px -10px;"
              >
                <div
                  class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="Grid__Container-sc-5irhjd-1 dRhDDA"
                  >
                    Connection Success
                  </div>
                </div>
                <div
                  class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="Grid__Container-sc-5irhjd-1 dRhDDA"
                  >
                    <div
                      class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default styledComponents__Progress-sc-vd53zu-0 laNiWC"
                    >
                      <div
                        class="ant-progress-outer"
                      >
                        <div
                          class="ant-progress-inner"
                          style="background-color: rgb(212, 212, 212);"
                        >
                          <div
                            class="ant-progress-bg"
                            style="width: 73.88428515495194%; height: 10px; background: rgb(35, 171, 54);"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-row Grid__GridRow-sc-5irhjd-2"
                style="margin: -10px -10px -10px -10px;"
              >
                <div
                  class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="Grid__Container-sc-5irhjd-1 dRhDDA"
                  >
                    Time To Connect
                  </div>
                </div>
                <div
                  class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="Grid__Container-sc-5irhjd-1 dRhDDA"
                  >
                    <div
                      class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default styledComponents__Progress-sc-vd53zu-0 laNiWC"
                    >
                      <div
                        class="ant-progress-outer"
                      >
                        <div
                          class="ant-progress-inner"
                          style="background-color: rgb(212, 212, 212);"
                        >
                          <div
                            class="ant-progress-bg"
                            style="width: 73.62284333197731%; height: 10px; background: rgb(35, 171, 54);"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-row Grid__GridRow-sc-5irhjd-2"
                style="margin: -10px -10px -10px -10px;"
              >
                <div
                  class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="Grid__Container-sc-5irhjd-1 dRhDDA"
                  >
                    Client Throughput
                  </div>
                </div>
                <div
                  class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="Grid__Container-sc-5irhjd-1 dRhDDA"
                  >
                    <div
                      class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default styledComponents__Progress-sc-vd53zu-0 laNiWC"
                    >
                      <div
                        class="ant-progress-outer"
                      >
                        <div
                          class="ant-progress-inner"
                          style="background-color: rgb(212, 212, 212);"
                        >
                          <div
                            class="ant-progress-bg"
                            style="width: 79.54545454545455%; height: 10px; background: rgb(35, 171, 54);"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-row Grid__GridRow-sc-5irhjd-2"
                style="margin: -10px -10px -10px -10px;"
              >
                <div
                  class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="Grid__Container-sc-5irhjd-1 dRhDDA"
                  >
                    Online APs
                  </div>
                </div>
                <div
                  class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="Grid__Container-sc-5irhjd-1 dRhDDA"
                  >
                    <div
                      class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default styledComponents__Progress-sc-vd53zu-0 laNiWC"
                    >
                      <div
                        class="ant-progress-outer"
                      >
                        <div
                          class="ant-progress-inner"
                          style="background-color: rgb(212, 212, 212);"
                        >
                          <div
                            class="ant-progress-bg"
                            style="width: 67.05309396485866%; height: 10px; background: rgb(35, 171, 54);"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-row Grid__GridRow-sc-5irhjd-2"
                style="margin: -10px -10px -10px -10px;"
              >
                <div
                  class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="Grid__Container-sc-5irhjd-1 dRhDDA"
                  >
                    AP Capacity
                  </div>
                </div>
                <div
                  class="ant-col ant-col-12 Grid__ColInner-sc-5irhjd-0 XtIJT"
                  style="padding: 10px 10px 10px 10px;"
                >
                  <div
                    class="Grid__Container-sc-5irhjd-1 dRhDDA"
                  >
                    <div
                      class="ant-progress ant-progress-line ant-progress-status-normal ant-progress-default styledComponents__Progress-sc-vd53zu-0 laNiWC"
                    >
                      <div
                        class="ant-progress-outer"
                      >
                        <div
                          class="ant-progress-inner"
                          style="background-color: rgb(212, 212, 212);"
                        >
                          <div
                            class="ant-progress-bg"
                            style="width: 52.083333333333336%; height: 10px; background: rgb(249, 195, 75);"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="resize-triggers"
          >
            <div
              class="expand-trigger"
            >
              <div
                style="width: 1281px; height: 801px;"
              />
            </div>
            <div
              class="contract-trigger"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
